fixed overlapping

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -111,6 +111,7 @@ a {
 }
 #mapimg{
     display: block;
+    height:100vh;
 }
 #image{    
   height: 100vh;
